# bluechip-hackathon-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.api.txt  requirements.txt
data/processed/: business_catalogue.json  eval_task_a.json  eval_task_b.json  user_profiles.json
paper/: solution_paper.tex
scripts/: build_catalogue.py  evaluate_task_a.py  evaluate_task_b.py
src/: config.py
src/agents/A/: graph.py  nodes.py  state.py
src/agents/B/: graph.py  nodes.py  state.py
src/api/: task_a.py  task_b.py
src/core/: profile_store.py
src/prompts/: loader.py  task_a_rating.md  task_a_review.md  task_b_analyze.md  task_b_apply_context.md  task_b_cross_domain.md  task_b_popularity_fallback.md  task_b_preference_retrieval.md  task_b_ranking.md
src/schemas/: user_profile.py
src/services/: catalogue.py  profile_builder.py
