[project]
name = "bluechip-hackathon-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Oladimeji",email = "boladimeji834@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "groq (>=1.2.0,<2.0.0)",
    "anthropic (>=0.103.1,<0.104.0)",
    "langgraph (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
